--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "pusher/pusher-push-notifications": "^2.0",
         "razorpay/razorpay": "^2.8",
         "shakurov/coinbase": "^0.7.7",
+        "softonic/graphql-client": "^3.1",
         "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^10.3",
         "torann/geoip": "^3.0",
