--- a/.env.example
+++ b/.env.example
@@ -37,12 +37,6 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
@@ -56,3 +50,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AWS_ACCESS_KEY_ID=DO801ZBHUZKRR44K3X98
+AWS_SECRET_ACCESS_KEY=sR9UqtVaj+4ynHYjmCz8ZtXI45SAkMYV3Lbdh5giHJw
+AWS_DEFAULT_REGION=fra1
+AWS_BUCKET=peacepay-bucket
+AWS_ENDPOINT=https://fra1.digitaloceanspaces.com
