--- a/github-actions-prod.yaml
+++ b/github-actions-prod.yaml
@@ -1,47 +1,38 @@
-# name: Manual Deploy Laravel to Production
+name: Manual Deploy Laravel to Production
 
-# on:
-#   workflow_dispatch:
+on:
+  workflow_dispatch:
 
-# jobs:
-#   deploy:
-#     name: Deploy to prod-01 and prod-02
-#     runs-on: ubuntu-latest
+jobs:
+  deploy:
+    name: Deploy to prod-01 and prod-02
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-#       - name: Set up SSH
-#         run: |
-#           mkdir -p ~/.ssh
-#           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-#           chmod 600 ~/.ssh/id_rsa
-#           ssh-keyscan -H ${{ secrets.PROD_01_HOST }} >> ~/.ssh/known_hosts
-#           ssh-keyscan -H ${{ secrets.PROD_02_HOST }} >> ~/.ssh/known_hosts
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.PROD_01_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.PROD_02_HOST }} >> ~/.ssh/known_hosts
 
-#       - name: Deploy to prod-01
-#         run: |
-#           ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_01_HOST }} << 'EOF'
-#             cd /var/www/laravel-app
-#             git pull origin main
-#             composer install --no-dev --optimize-autoloader
-#             php artisan migrate --force
-#             php artisan config:cache
-#             php artisan route:cache
-#             php artisan view:cache
-#             chown -R www-data:www-data .
-#           EOF
+      - name: Deploy to prod-01
+        run: |
+          ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_01_HOST }} << 'EOF'
+            cd /var/www/peacepay-backend
+            git pull origin main
+            chown -R www-data:www-data .
+          EOF
 
-#       - name: Deploy to prod-02
-#         run: |
-#           ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_02_HOST }} << 'EOF'
-#             cd /var/www/laravel-app
-#             git pull origin main
-#             composer install --no-dev --optimize-autoloader
-#             php artisan migrate --force
-#             php artisan config:cache
-#             php artisan route:cache
-#             php artisan view:cache
-#             chown -R www-data:www-data .
-#           EOF
+      - name: Deploy to prod-02
+        run: |
+          ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_02_HOST }} << 'EOF'
+            cd /var/www/peacepay-backend
+            git pull origin main
+            php artisan optimize
+            chown -R www-data:www-data .
+          EOF
