add manual prod pipeline

--- a/.github/workflows/github-actions-prod.yaml
+++ b/.github/workflows/github-actions-prod.yaml
@@ -25,6 +25,9 @@ jobs:
           ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_01_HOST }} << 'EOF'
             cd /var/www/peacepay-backend
             git pull origin main
+            php artisan config:clear
+            php artisan cache:clear
+            php artisan config:cache
             chown -R www-data:www-data .
           EOF
 
@@ -33,6 +36,8 @@ jobs:
           ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_02_HOST }} << 'EOF'
             cd /var/www/peacepay-backend
             git pull origin main
-            php artisan optimize
+            php artisan config:clear
+            php artisan cache:clear
+            php artisan config:cache
             chown -R www-data:www-data .
           EOF
