--- a/.github/workflows/github-actions-prod.yaml
+++ b/.github/workflows/github-actions-prod.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - stage
 jobs:
   deploy:
     name: Deploy to prod-01 and prod-02
@@ -26,7 +25,8 @@ jobs:
         run: |
           ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_01_HOST }} << 'EOF'
             cd /var/www/peacepay-backend
-            git pull origin main
+            git fetch origin
+            git reset --hard origin/main
             php artisan migrate --force
             composer install
             php artisan config:clear
@@ -40,7 +40,8 @@ jobs:
         run: |
           ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_02_HOST }} << 'EOF'
             cd /var/www/peacepay-backend
-            git pull origin main
+            git fetch origin
+            git reset --hard origin/main
             php artisan migrate --force
             composer install
             php artisan config:clear
