--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,5 @@ AWS_SECRET_ACCESS_KEY=sR9UqtVaj+4ynHYjmCz8ZtXI45SAkMYV3Lbdh5giHJw
 AWS_DEFAULT_REGION=fra1
 AWS_BUCKET=peacepay-bucket
 AWS_ENDPOINT=https://fra1.digitaloceanspaces.com
+
+MOBILE_CODE=2
