--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,7 @@ MSHASTRA_USERNAME=healthpay
 MSHASTRA_PASSWORD=91ujmb_e
 SENDER_ID=HealthPay
 
+
+CEQUENS_API_TOKEN=your_cequens_api_token_here
+CEQUENS_API_KEY=your_cequens_api_key_here
+CEQUENS_SENDER_NAME=PeacePay
