--- a/public/.htaccess
+++ b/public/.htaccess
@@ -22,3 +22,9 @@
     # cors
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
+
+# PHP Upload Settings - Allow 10MB uploads
+php_value upload_max_filesize 10M
+php_value post_max_size 10M
+php_value max_execution_time 300
+php_value max_input_time 300
