feat: Add Firebase Admin SDK configuration for push notifications
- Add Firebase credentials file to storage/app/firebase/
- Add Firebase configuration to config/services.php
- Add FIREBASE_CREDENTIALS and FIREBASE_PROJECT_ID to .env.example
- Add google/auth library to composer.json for FCM v1 API OAuth2

Firebase Project: peacepay-7ad55
Service Account: firebase-adminsdk-fbsvc@peacepay-7ad55.iam.gserviceaccount.com

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "buglinjo/laravel-webp": "^2.3",
         "doctrine/dbal": "^3.0",
         "flutterwavedev/flutterwave-v3": "^1.0",
+        "google/auth": "^1.28",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
