--- a/.env.example
+++ b/.env.example
@@ -100,6 +100,14 @@ MAIL_FROM_NAME="${APP_NAME}"
 # AWS_DEFAULT_REGION=me-south-1
 
 # -----------------------------------------------------------------------------
+# FIREBASE (Push Notifications)
+# -----------------------------------------------------------------------------
+# Firebase Cloud Messaging credentials
+# Download service account JSON from Firebase Console > Project Settings > Service Accounts
+FIREBASE_CREDENTIALS=storage/app/firebase/firebase-credentials.json
+FIREBASE_PROJECT_ID=peacepay-7ad55
+
+# -----------------------------------------------------------------------------
 # SMS - CEQUENS (Primary)
 # -----------------------------------------------------------------------------
 # Cequens API credentials - https://developer.cequens.com
